<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/consumo" />

        <EditText
            android:id="@+id/consumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/distancia" />

        <EditText
            android:id="@+id/distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/via" />

        <Spinner
            android:id="@+id/s1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/tiempo" />

        <EditText
            android:id="@+id/tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tiempo_empleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:text="@string/calcTiempo" />

            <Button
                android:id="@+id/consumo_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:text="@string/consumoTotal" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="500sp"
        android:text="@string/res"
        android:textSize="30sp" />

</RelativeLayout>